--- a/all_recipes.css
+++ b/all_recipes.css
@@ -107,8 +107,9 @@ main{
 
 footer{
   display: flex;
-  flex-direction: column;
   align-items: center;
+  justify-content: center;
+  flex-direction: column;
 }
   
 
